# GSensorTest3d

./: .gitattributes  .gitignore  3d-cube.pro  CMakeLists.txt  CMakePresets.json
cmake/: utilities.cmake
docs/: Build under MSVC2017.md  Building with CMake.md
firmware/arduino/: MPU6050.ino
inc/: inputdialog.hpp  mainwindow.hpp  modelloader.hpp  parameters.hpp  scenemodifier.hpp  serialport.hpp
resources/: qtquickcontrols2.conf  resources.rc
sources/: inputdialog.cpp  inputdialog.hpp  main.cpp  main.qml  qml.qrc  serialport.hpp
sources/core/: SerialPortReader.cpp  SerialPortReader.h  mainwindow.cpp  modelloader.cpp  parameters.hpp  serialport.cpp
sources/model/: PortSettingsModel.cpp  PortSettingsModel.h
sources/pages/: ApplicationScene3dView.qml  GyroscopeSettingsView.qml  PortSettingsView.qml
sources/pages/common/: GroupControlView.qml
src/: inputdialog.cpp  main.cpp  mainwindow.cpp  modelloader.cpp  scenemodifier.cpp  serialport.cpp
